# frinx-python-sdk

./: .gitignore  .pre-commit-config.yaml  Makefile  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: pr-check.yml  system-tests.yml
examples/: main.py
examples/simple_worker/: Dockerfile  main.py  pyproject.toml
examples/simple_worker/workers/: simple_worker.py  test_worker.py  test_workflow.py  workflow.py
frinx/client/v2/: conductor.py  frinx_conductor_wrapper.py
frinx/common/: conductor_enums.py  frinx_rest.py  util.py
frinx/common/logging/: config.py  handlers.py  root_logger.py  settings.py  task_logging.py
frinx/common/worker/: exception.py  task_def.py  task_result.py  worker.py
frinx/common/workflow/: task.py  workflow.py
frinx/services/http_service/: enums.py  exceptions.py  http_service.py
frinx/services/uniconfig/: rest_api.py  utils.py
frinx/workers/http_workers/: http_workers.py  util.py
frinx/workers/test/: test_worker.py
frinx/workers/uniconfig/: __init__.py  cli_network_topology.py  connection_manager.py  snapshot_manager.py  uniconfig_manager.py
frinx/workers/utils_workers/: utils_service.py
frinx/workers/wf_input_handlers/: wf_input_handlers_service.py
frinx/workflows/dynamic_fork/: dynamic_fork_workflows.py  dynamic_fork_workflows_service.py
tests/execute_sdk/: Dockerfile  docker-compose-performance.yml  docker-compose.yml
tests/system_tests/: conftest.py  pytest.ini  test_conductor_api.py  test_conductor_performance.py
tests/unit_tests/: conftest.py
(+6 files in other folders)
